--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html body {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: rgb(48, 46, 48);
 }
@@ -8,11 +13,6 @@ body {
 
 #about {
     color: #DBD3D8;
-}
-
-.vertical-center {
-    display: flex;
-    align-items: center;
 }
 
 /* #about_text {
