--- a/my-nextjs-app/app/globals.css
+++ b/my-nextjs-app/app/globals.css
@@ -1,22 +1,21 @@
-#home_page, html {
+.star-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   background: radial-gradient(ellipse at bottom, #1b2735 0%,  #090a0f 100%);
+  /* Adjust the blur intensity as needed */
 }
 
-/* styles/globals.css */
-.star-field {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
 
 .star {
   position: absolute;
   border-radius: 50%;
   transition: opacity 2s alternate;
   transform-origin: center;
+  filter: blur(0.5px); /* Adjust the blur intensity for the stars */
 }
 
 /* Define the twinkle animation for stars with the "twinkle" class */
