--- a/my-nextjs-app/app/globals.css
+++ b/my-nextjs-app/app/globals.css
@@ -9,13 +9,31 @@
   /* Adjust the blur intensity as needed */
 }
 
+.star-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: rgba(1, 1, 10, 0.9); */
+  z-index: -1; /* Place it below other content */
+}
+
 
 .star {
   position: absolute;
   border-radius: 50%;
   transition: opacity 2s alternate;
   transform-origin: center;
-  filter: blur(0.5px); /* Adjust the blur intensity for the stars */
+  filter: blur(0.9px); /* Adjust the blur intensity for the stars */
+}
+
+.center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 /* Define the twinkle animation for stars with the "twinkle" class */
@@ -33,3 +51,4 @@
     transform: scale(1.4);
   }
 }
+
